dWinemaker 1.4
• onPaint support
• Webhook support
• Automatic jar updating
• Fixed zamorak wines